##############################################################################
# \file  CMakeLists.txt
# \brief CMakeLists.txt file of SBIA Boost prerequisite library.
#
# Copyright (c) 2011 University of Pennsylvania. All rights reserved.
# See LICENSE or Copyright file in project root directory for details.
#
# Contact: SBIA Group <sbia-software -at- uphs.upenn.edu>
##############################################################################

include_directories ("${CMAKE_CURRENT_SOURCE_DIR}")

add_subdirectory (libs)

