##############################################################################
# \file  CMakeLists.txt
# \brief CMake file to configure build system of external libraries.
#
# This CMake file can be configured to build and/or install required
# thirdpary libraries which are bundled with this software package.
#
# For copyright information please see Copyright.txt in the root
# directory of the project.
#
# Contact: SBIA Group <sbia-software@uphs.upenn.edu>
##############################################################################

add_subdirectory (BLAS)

